Fix overflow scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,28 +1,6 @@
 .app-wrapper {
   position: relative;
-  overflow: hidden;
   position: relative;
-  height: 92vh;
-}
-
-.transition-top {
-  position: absolute;
-  top: 0px;
-  height: 50%;
-  width: 100%;
-  background: linear-gradient(#1F1F1F, #524f4f);
-  transform: translateY(-102%);
-  /* transform: translateY(0%); */
-  transition: transform 2s ease-in;
-}
-
-.transition-bottom {
-  position: absolute;
-  bottom: 0px;
-  height: 50%;
-  width: 100%;
-  background: linear-gradient(#524f4f, #1F1F1F);
-  transform: translateY(100%);
-  /* transform: translateY(0%); */
-  transition: transform 2s ease-in;
+  height: 100vh;
+  overflow: hidden;
 }
