--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,8 +1,6 @@
 .q-ctn {
   height: 100%;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
   background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #2b2b2b;
   background-blend-mode: multiply, multiply;
 }
@@ -30,6 +28,10 @@
   align-items: flex-end;
   width: 100%;
   height: 14vh;
+}
+
+.filler {
+  height: 3vh;
 }
 
 @media screen and (min-width: 768px) {
