--- a/src/styles.css
+++ b/src/styles.css
@@ -12,13 +12,11 @@
 *::-webkit-scrollbar { width: 0 !important }
 
 html, body {
-  height: 100%
+  /* overflow-y:hidden; */
+  height:100%;
 }
 
 body {
   background: #121212;
   color: #ffffff;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
